--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -4,7 +4,7 @@
   }
   
   .box .navbar {
-    background-color: #000000;
+    background-color: #0c0a0a;
     height: 101px;
     left: 0;
     position: fixed;
