--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -1,34 +1,379 @@
-
-  
-  .genre {
-    display: inline-block;
-    margin-right: 10px;
-    padding: 5px 10px;
-    border: 1px solid white;
-    border-radius: 20px;
-  }
-  
-.anime-genre {
-    display: inline-block;
-    margin-right: 10px;
-    padding: 5px 10px;
-    border: 1px solid white;
-    border-radius: 20px;
+.box {
+  height: 1005px;
+  width: 1464px;
 }
 
-.anime-genre:nth-child(1) {
-    border-color: #f43232;
+.box .group {
+  height: 1005px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 1482px;
 }
 
-.anime-genre:nth-child(2) {
-    border-color: #ea81e6;
+.box .overlap {
+  height: 1005px;
+  position: relative;
+  width: 1440px;
 }
 
-.anime-genre:nth-child(3) {
-    border-color: #0795fc;
+.box .anime-background {
+  height: 900px;
+  left: 335px;
+  object-fit: cover;
+  position: absolute;
+  top: 62px;
+  width: 1105px;
 }
-  
 
-  
-  /* Add additional CSS styles as needed for other elements */
-  
+.box .rectangle {
+  background: linear-gradient(
+    180deg,
+    rgb(0, 0, 0) 0%,
+    rgba(241.46, 237.38, 237.38, 0) 76.14%,
+    rgba(255, 250.69, 250.69, 0) 100%
+  );
+  height: 1000px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 1440px;
+}
+
+.box .anime-title {
+  color: #ffffff;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 60px;
+  font-weight: 700;
+  left: 72px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-shadow: 0px 3px 10px #00000040;
+  top: 141px;
+  width: 748px;
+}
+
+.box .season {
+  color: #ffffff;
+  font-family: "Inika-Regular", Helvetica;
+  font-size: 22px;
+  font-weight: 400;
+  left: 72px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 112px;
+}
+
+.box .year {
+  color: #ffffff;
+  font-family: "Inika-Regular", Helvetica;
+  font-size: 22px;
+  font-weight: 400;
+  left: 175px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 112px;
+}
+
+.box .season-description {
+  color: #ffffff;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+  left: 72px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 500px;
+  width: 573px;
+}
+
+.box .star-1 {
+  height: 35px;
+  left: 72px;
+  position: absolute;
+  top: 385px;
+  width: 37px;
+}
+
+.box .star-2 {
+  height: 35px;
+  left: 116px;
+  position: absolute;
+  top: 385px;
+  width: 37px;
+}
+
+.box .star-3 {
+  height: 35px;
+  left: 160px;
+  position: absolute;
+  top: 385px;
+  width: 37px;
+}
+
+.box .star-4 {
+  height: 35px;
+  left: 204px;
+  position: absolute;
+  top: 385px;
+  width: 37px;
+}
+
+.box .star-5 {
+  height: 35px;
+  left: 248px;
+  position: absolute;
+  top: 385px;
+  width: 37px;
+}
+
+.box .star-6 {
+  height: 35px;
+  left: 292px;
+  position: absolute;
+  top: 385px;
+  width: 37px;
+}
+
+.box .overlap-group-wrapper {
+  height: 49px;
+  left: 72px;
+  position: absolute;
+  top: 630px;
+  width: 171px;
+}
+
+.box .overlap-group {
+  background-color: #d90cb8;
+  border-radius: 48px;
+  height: 49px;
+  position: relative;
+  width: 169px;
+}
+
+.box .text-wrapper {
+  color: #ffffff;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 19px;
+  font-weight: 700;
+  left: 50px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  width: 106px;
+}
+
+.box .zondicons-add {
+  height: 30px;
+  left: 8px;
+  position: absolute;
+  top: 10px;
+  width: 30px;
+}
+
+.box .overlap-wrapper {
+  height: 49px;
+  left: 268px;
+  position: absolute;
+  top: 630px;
+  width: 182px;
+}
+
+.box .div {
+  background-color: #ea81e6;
+  border-radius: 48px;
+  height: 49px;
+  position: relative;
+  width: 180px;
+}
+
+.box .text-wrapper-2 {
+  color: #ffffff;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 19px;
+  font-weight: 700;
+  left: 40px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  width: 140px;
+}
+
+.box .zondicons-add-2 {
+  height: 30px;
+  left: 9px;
+  position: absolute;
+  top: 10px;
+  width: 32px;
+}
+
+.box .new-episodes-release {
+  color: #fff400;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 27px;
+  font-weight: 700;
+  left: 80px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 695px;
+  width: 542px;
+}
+
+.box .rectangle-2 {
+  background-color: #000000;
+  height: 267px;
+  left: 0;
+  position: absolute;
+  top: 738px;
+  width: 1440px;
+}
+
+.box .image {
+  height: 223px;
+  left: 18px;
+  object-fit: cover;
+  position: absolute;
+  top: 761px;
+  width: 151px;
+}
+
+.box .image-2 {
+  height: 225px;
+  left: 274px;
+  object-fit: cover;
+  position: absolute;
+  top: 759px;
+  width: 151px;
+}
+
+.box .image-3 {
+  height: 225px;
+  left: 530px;
+  object-fit: cover;
+  position: absolute;
+  top: 760px;
+  width: 151px;
+}
+
+.box .image-4 {
+  height: 223px;
+  left: 786px;
+  object-fit: cover;
+  position: absolute;
+  top: 759px;
+  width: 157px;
+}
+
+.box .image-5 {
+  height: 223px;
+  left: 1048px;
+  object-fit: cover;
+  position: absolute;
+  top: 761px;
+  width: 151px;
+}
+
+.box .text-wrapper-3 {
+  color: #ffffff;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 30px;
+  font-weight: 700;
+  left: 1226px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 759px;
+  white-space: nowrap;
+  width: 214px;
+}
+
+.box .vector-5 {
+  height: 76px;
+  left: 1295px;
+  position: absolute;
+  top: 870px;
+  width: 76px;
+}
+
+.box .genre-1 {
+  background-color: #000000;
+  border: 5px solid;
+  border-color: #f43232;
+  height: 41px;
+  left: 67px;
+  position: absolute;
+  top: 443px;
+  width: 110px;
+  color: #f43232;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.box .text-wrapper-4 {
+  color: #f43232;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+  left: 72px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 448px;
+  width: 100px;
+}
+
+.box .genre-2 {
+  background-color: #000000;
+  border: 5px solid;
+  border-color: #ea81e6;
+  height: 41px;
+  left: 321px;
+  position: absolute;
+  top: 443px;
+  width: 111px;
+  color: #ea81e6;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.box .genre-3 {
+  background-color: #000000;
+  border: 5px solid;
+  border-color: #0795fc;
+  height: 41px;
+  left: 191px;
+  position: absolute;
+  top: 443px;
+  width: 111px;
+  color: #0795fc;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+ 
+}
+
+.box .text-wrapper-5 {
+  color: #0795fc;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+  left: 196px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 448px;
+  width: 100px;
+}
