--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -1,147 +1,172 @@
-.box {
-  height: 1005px;
-  width: 1464px;
+.homepage {
+  background-color: rgb(32, 21, 21);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
 }
 
-.box .group {
-  height: 1005px;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 1482px;
+.homepage .group-wrapper {
+  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(153, 153, 153) 98.75%);
+  background-color: rgba(255, 255, 255, 1);
+  height: 1024px;
+  overflow: hidden;
+  width: 1440px;
 }
 
-.box .overlap {
-  height: 1005px;
+.homepage .group {
+  height: 928px;
   position: relative;
-  width: 1440px;
+  top: 103px;
+  width: 1458px;
 }
 
-.box .anime-background {
-  height: 900px;
-  left: 335px;
-  object-fit: cover;
-  position: absolute;
-  top: 62px;
-  width: 1105px;
-}
-
-.box .rectangle {
-  height: 1000px;
+.homepage .overlap {
+  background-image: url(./anime-background-image.png);
+  background-position: 50% 50%;
+  background-size: cover;
+  height: 688px;
   left: 0;
   position: absolute;
   top: 0;
   width: 1440px;
 }
 
-.box .anime-title {
+.homepage .overlap-group {
+  background-color: #000000;
+  border: 5px solid;
+  border-color: #f43232;
+  height: 41px;
+  left: 38px;
+  position: absolute;
+  top: 404px;
+  width: 110px;
+}
+
+.homepage .text-wrapper {
+  color: #f43232;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+  left: 0;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 100px;
+}
+
+.homepage .anime-title {
   color: #ffffff;
   font-family: "Inika-Bold", Helvetica;
   font-size: 60px;
   font-weight: 700;
-  left: 72px;
+  left: 16px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-shadow: 0px 3px 10px #00000040;
-  top: 141px;
+  top: 81px;
   width: 748px;
 }
 
-.box .season {
+.homepage .season {
   color: #ffffff;
   font-family: "Inika-Regular", Helvetica;
   font-size: 22px;
   font-weight: 400;
-  left: 72px;
+  left: 16px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 112px;
+  top: 334px;
 }
 
-.box .year {
+.homepage .year {
   color: #ffffff;
   font-family: "Inika-Regular", Helvetica;
   font-size: 22px;
   font-weight: 400;
-  left: 175px;
+  left: 194px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 112px;
+  top: 327px;
 }
 
-.box .season-description {
+.homepage .div-wrapper {
+  background-color: #000000;
+  border: 5px solid;
+  border-color: #0795fc;
+  height: 41px;
+  left: 173px;
+  position: absolute;
+  top: 399px;
+  width: 111px;
+}
+
+.homepage .div {
+  color: #0795fc;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+  left: 6px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 100px;
+}
+
+.homepage .shonen-wrapper {
+  background-color: #000000;
+  border: 5px solid;
+  border-color: #ea81e6;
+  height: 41px;
+  left: 325px;
+  position: absolute;
+  top: 404px;
+  width: 111px;
+}
+
+.homepage .shonen {
+  color: #ea81e6;
+  font-family: "Inika-Bold", Helvetica;
+  font-size: 22px;
+  font-weight: 700;
+  left: 0;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 100px;
+}
+
+.homepage .season-description {
   color: #ffffff;
   font-family: "Inika-Bold", Helvetica;
   font-size: 22px;
   font-weight: 700;
-  left: 72px;
+  left: 19px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 500px;
+  top: 460px;
   width: 573px;
 }
 
-.box .star-1 {
-  height: 35px;
-  left: 72px;
-  position: absolute;
-  top: 385px;
-  width: 37px;
-}
-
-.box .star-2 {
-  height: 35px;
-  left: 116px;
-  position: absolute;
-  top: 385px;
-  width: 37px;
-}
-
-.box .star-3 {
-  height: 35px;
-  left: 160px;
-  position: absolute;
-  top: 385px;
-  width: 37px;
-}
-
-.box .star-4 {
-  height: 35px;
-  left: 204px;
-  position: absolute;
-  top: 385px;
-  width: 37px;
-}
-
-.box .star-5 {
-  height: 35px;
-  left: 248px;
-  position: absolute;
-  top: 385px;
-  width: 37px;
-}
-
-.box .star-6 {
-  height: 35px;
-  left: 292px;
-  position: absolute;
-  top: 385px;
-  width: 37px;
-}
-
-.box .overlap-group-wrapper {
+.homepage .overlap-group-wrapper {
   height: 49px;
-  left: 72px;
+  left: 21px;
   position: absolute;
-  top: 630px;
+  top: 596px;
   width: 171px;
 }
 
-.box .overlap-group {
+.homepage .overlap-group-2 {
   background-color: #d90cb8;
   border-radius: 48px;
   height: 49px;
@@ -149,7 +174,7 @@
   width: 169px;
 }
 
-.box .text-wrapper {
+.homepage .text-wrapper-2 {
   color: #ffffff;
   font-family: "Inika-Bold", Helvetica;
   font-size: 19px;
@@ -163,7 +188,7 @@
   width: 106px;
 }
 
-.box .zondicons-add {
+.homepage .zondicons-add {
   height: 30px;
   left: 8px;
   position: absolute;
@@ -171,203 +196,91 @@
   width: 30px;
 }
 
-.box .overlap-wrapper {
-  height: 49px;
-  left: 268px;
-  position: absolute;
-  top: 630px;
-  width: 182px;
-}
-
-.box .div {
-  background-color: #ea81e6;
-  border-radius: 48px;
-  height: 49px;
-  position: relative;
-  width: 180px;
-}
-
-.box .text-wrapper-2 {
-  color: #ffffff;
-  font-family: "Inika-Bold", Helvetica;
-  font-size: 19px;
-  font-weight: 700;
-  left: 40px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 10px;
-  width: 140px;
-}
-
-.box .zondicons-add-2 {
-  height: 30px;
-  left: 9px;
-  position: absolute;
-  top: 10px;
-  width: 32px;
-}
-
-.box .new-episodes-release {
+.homepage .new-episodes-release {
   color: #fff400;
   font-family: "Inika-Bold", Helvetica;
   font-size: 27px;
   font-weight: 700;
-  left: 80px;
+  left: 16px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 695px;
+  top: 645px;
   width: 542px;
 }
 
-.box .rectangle-2 {
+.homepage .overlap-2 {
   background-color: #000000;
-  height: 267px;
+  height: 233px;
   left: 0;
   position: absolute;
-  top: 738px;
+  top: 688px;
   width: 1440px;
 }
 
-.box .image {
+.homepage .image {
   height: 223px;
-  left: 18px;
+  left: 43px;
   object-fit: cover;
   position: absolute;
-  top: 761px;
+  top: 10px;
   width: 151px;
 }
 
-.box .image-2 {
+.homepage .img {
+  height: 218px;
+  left: 279px;
+  object-fit: cover;
+  position: absolute;
+  top: 15px;
+  width: 151px;
+}
+
+.homepage .image-2 {
   height: 225px;
-  left: 274px;
+  left: 517px;
   object-fit: cover;
   position: absolute;
-  top: 759px;
+  top: 8px;
   width: 151px;
 }
 
-.box .image-3 {
-  height: 225px;
-  left: 530px;
-  object-fit: cover;
-  position: absolute;
-  top: 760px;
-  width: 151px;
-}
-
-.box .image-4 {
+.homepage .image-3 {
   height: 223px;
-  left: 786px;
+  left: 753px;
   object-fit: cover;
   position: absolute;
-  top: 759px;
+  top: 0;
   width: 157px;
 }
 
-.box .image-5 {
+.homepage .image-4 {
   height: 223px;
-  left: 1048px;
+  left: 997px;
   object-fit: cover;
   position: absolute;
-  top: 761px;
+  top: 6px;
   width: 151px;
 }
 
-.box .text-wrapper-3 {
+.homepage .text-wrapper-3 {
   color: #ffffff;
   font-family: "Inika-Bold", Helvetica;
   font-size: 30px;
   font-weight: 700;
-  left: 1226px;
+  left: 1191px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 759px;
+  top: 15px;
   white-space: nowrap;
   width: 214px;
 }
 
-.box .vector-5 {
+.homepage .vector {
   height: 76px;
-  left: 1295px;
+  left: 1260px;
   position: absolute;
-  top: 870px;
+  top: 112px;
   width: 76px;
-}
-
-.box .genre-1 {
-  background-color: #000000;
-  border: 5px solid;
-  border-color: #f43232;
-  height: 41px;
-  left: 67px;
-  position: absolute;
-  top: 443px;
-  width: 110px;
-  color: #f43232;
-  font-family: "Inika-Bold", Helvetica;
-  font-size: 22px;
-  font-weight: 700;
-}
-
-.box .text-wrapper-4 {
-  color: #f43232;
-  font-family: "Inika-Bold", Helvetica;
-  font-size: 22px;
-  font-weight: 700;
-  left: 72px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 448px;
-  width: 100px;
-}
-
-.box .genre-2 {
-  background-color: #000000;
-  border: 5px solid;
-  border-color: #ea81e6;
-  height: 41px;
-  left: 321px;
-  position: absolute;
-  top: 443px;
-  width: 111px;
-  color: #ea81e6;
-  font-family: "Inika-Bold", Helvetica;
-  font-size: 22px;
-  font-weight: 700;
-}
-
-.box .genre-3 {
-  background-color: #000000;
-  border: 5px solid;
-  border-color: #0795fc;
-  height: 41px;
-  left: 191px;
-  position: absolute;
-  top: 443px;
-  width: 111px;
-  color: #0795fc;
-  font-family: "Inika-Bold", Helvetica;
-  font-size: 22px;
-  font-weight: 700;
- 
-}
-
-.box .text-wrapper-5 {
-  color: #0795fc;
-  font-family: "Inika-Bold", Helvetica;
-  font-size: 22px;
-  font-weight: 700;
-  left: 196px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 448px;
-  width: 100px;
 }
