--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -1,5 +1,5 @@
 .homepage {
-  background-color: rgb(32, 21, 21);
+  background-color: rgba(255, 255, 255, 1);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -22,7 +22,6 @@
 }
 
 .homepage .overlap {
-  background-image: url(./anime-background-image.png);
   background-position: 50% 50%;
   background-size: cover;
   height: 688px;
@@ -284,3 +283,5 @@
   top: 112px;
   width: 76px;
 }
+
+
